<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SCREEN"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gaussapp.myapplication.FirstFragment">


    <ImageView
        android:id="@+id/rysunek"
        android:contentDescription="@string/graph_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toTopOf="@+id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deletebutton_first"
        android:layout_width="43dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFFFFF"
        android:foreground="@mipmap/trashcan_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pierwszy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#A50756"
        android:rotationY="0"
        android:text="@string/next"
        android:textDirection="locale"
        app:icon="@drawable/moja_strzalka"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="NEXT" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#A50756"
        android:onClick="CalculateOnClick"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#A50707"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/point_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/point_first"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="12"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/result_text_first"
        android:textColor="#A55607"
        android:textColorLink="#CA1313"

        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="164dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/median_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#A50707"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/m_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/median_value_first"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="12"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/std_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#A50707"
        android:backgroundTintMode="src_in"
        android:drawableStart="@drawable/s_icon"
        android:drawablePadding="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/std_first"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:maxLength="12"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/median_first" />

</androidx.constraintlayout.widget.ConstraintLayout>
